CRUD operation updated on workouts services
